[package]
name = "feature-gate-multisig-tool"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["sean@sqds.io", "orion@sqds.io", "bastien@sqds.io"]
description = "A CLI tool for rapidly provisioning minimal Squads multisig setups specifically designed for Solana feature gate governance"
repository = "https://github.com/Squads-Protocol/feature-gate-multisig"
keywords = ["solana", "multisig", "governance", "feature-gates", "blockchain"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
inquire = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
borsh = "1.5.7"
colored = "2.2.0"
dialoguer = "0.11.0"
indicatif = "0.17.11"
eyre = "0.6.12"
tabled = "0.15"

solana-client="2.0.0"
solana-clap-v3-utils = "2.2.0"
solana-instruction = {version = "2.0.0", features = ["bincode"]}
solana-pubkey = {version = "2.4.0", features = ["borsh", "curve25519"]}
solana-keypair = "2.0.0"
solana-signer = "2.0.0"
solana-message = "2.0.0"
solana-transaction = {version = "2.0.0", features = ["serde", "bincode"]}
solana-compute-budget-interface = "2.0.0"
solana-system-interface = "1.0.0"
solana-rent = "2.0.0"
solana-commitment-config = "2.0.0"
solana-hash = "2.0.0"

[dev-dependencies]
solana-program-test = "2.0.0"
solana-sdk = "2.0.0"
tokio = { version = "1.0", features = ["full"] }
solana-program = "2.0.0"
solana-client = "2.0.0"
once_cell = "1.19"
